--- a/src/index.css
+++ b/src/index.css
@@ -5,22 +5,27 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+    width: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(to left, #00b7c6 35%, #cadb44);
 }
+div{
+  width: 100%;
+}
 
 .h11{  
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   font-family: 'Comfortaa', cursive;
   text-shadow: 1px 1px 2px rgb(7, 5, 5), 0 0 1em rgb(0, 102, 255), 0 0 0.2em rgb(255, 208, 0);
   text-transform: uppercase;
   text-align: left;
   padding-right: 20%;
+  width: 100%;
 
 }
 .h11  b{
-  font-size: 4.5rem;
+  font-size: 2.5rem;
   text-transform: lowercase;
 }
 
